<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xml_screen_bg"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:paddingBottom="14dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/xml_tasks_title"
                        android:textColor="@color/xml_text_primary"
                        android:textSize="38sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/xml_tasks_subtitle"
                        android:textColor="@color/xml_text_secondary"
                        android:textSize="17sp" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/openCreateTaskButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xml_create_task"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@color/xml_primary"
                    app:cornerRadius="10dp" />
            </LinearLayout>


            <include
                android:id="@+id/taskItemOne"
                layout="@layout/item_task" />

            <include
                android:id="@+id/taskItemTwo"
                layout="@layout/item_task" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <include layout="@layout/bottom_nav_bar" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


